Facebook all files

--- a/mavan_facebook/test-output/emailable-report.html
+++ b/mavan_facebook/test-output/emailable-report.html
@@ -9,30 +9,104 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite2</th></tr>
-<tr><td><a href="#t0">Chrome test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">22,734</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Chrome test</a></td><td class="num">2</td><td class="num attn">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">16,238</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Firefox test</a></td><td class="num">2</td><td class="num attn">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">18,592</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num attn">2</th><th class="num">0</th><th class="num attn">2</th><th class="num">34,830</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite2</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Chrome test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">pack1.TestNg_Login_Retesting</td><td><a href="#m0">Verify_Login_Credentials</a></td><td rowspan="3">1664342071612</td><td rowspan="3">5964</td></tr><tr class="failedeven"><td><a href="#m1">Verify_Login_Credentials</a></td></tr><tr class="failedeven"><td><a href="#m2">Verify_Login_Credentials</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite2</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Chrome test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">pack1.TestNG_Verift_Login_And_CreateNewAccount</td><td><a href="#m0">afterMethod</a></td><td rowspan="1">1665000249831</td><td rowspan="1">206</td></tr><tr><th colspan="4">Chrome test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">pack1.TestNG_Verift_Login_And_CreateNewAccount</td><td><a href="#m1">Verify_Login_Credentials</a></td><td rowspan="1">1665000248442</td><td rowspan="1">1383</td></tr><tr><th colspan="4">Chrome test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="4">pack1.TestNG_Verift_Login_And_CreateNewAccount</td><td><a href="#m2">Verify_Login_and_CreateNewAccount</a></td><td rowspan="1">1665000250042</td><td rowspan="1">-1665000250042</td></tr><tr class="skippedeven"><td><a href="#m3">afterClass</a></td><td rowspan="1">1665000259654</td><td rowspan="1">-1665000259654</td></tr><tr class="skippedeven"><td><a href="#m4">afterMethod</a></td><td rowspan="1">1665000250049</td><td rowspan="1">-1665000250049</td></tr><tr class="skippedeven"><td><a href="#m5">removeObjects</a></td><td rowspan="1">1665000250053</td><td rowspan="1">-1665000250053</td></tr><tr class="skippedodd"><td rowspan="1">pack1.TestNG_verify_rooms_page</td><td><a href="#m6">closedBrowser</a></td><td rowspan="1">1665000259656</td><td rowspan="1">-1665000259656</td></tr><tr><th colspan="4">Chrome test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">pack1.TestNG_Verift_Login_And_CreateNewAccount</td><td><a href="#m7">Verify_CreateNewAccount_Button</a></td><td rowspan="1">1665000250045</td><td rowspan="1">0</td></tr><tr><th colspan="4">Chrome test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">pack1.TestNG_verify_rooms_page</td><td><a href="#m8">Verify_ReturnToMessenger_button</a></td><td rowspan="1">1665000251909</td><td rowspan="1">935</td></tr><tr class="passedeven"><td><a href="#m9">Verify_VisitToHelpCenter_button</a></td><td rowspan="1">1665000255326</td><td rowspan="1">4324</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Firefox test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">pack1.TestNG_Verift_Login_And_CreateNewAccount</td><td><a href="#m10">afterMethod</a></td><td rowspan="1">1665000270737</td><td rowspan="1">91</td></tr><tr><th colspan="4">Firefox test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">pack1.TestNG_Verift_Login_And_CreateNewAccount</td><td><a href="#m11">Verify_Login_Credentials</a></td><td rowspan="1">1665000270348</td><td rowspan="1">385</td></tr><tr><th colspan="4">Firefox test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="4">pack1.TestNG_Verift_Login_And_CreateNewAccount</td><td><a href="#m12">Verify_Login_and_CreateNewAccount</a></td><td rowspan="1">1665000270832</td><td rowspan="1">-1665000270832</td></tr><tr class="skippedeven"><td><a href="#m13">afterClass</a></td><td rowspan="1">1665000278313</td><td rowspan="1">-1665000278313</td></tr><tr class="skippedeven"><td><a href="#m14">afterMethod</a></td><td rowspan="1">1665000270838</td><td rowspan="1">-1665000270838</td></tr><tr class="skippedeven"><td><a href="#m15">removeObjects</a></td><td rowspan="1">1665000270840</td><td rowspan="1">-1665000270840</td></tr><tr class="skippedodd"><td rowspan="1">pack1.TestNG_verify_rooms_page</td><td><a href="#m16">closedBrowser</a></td><td rowspan="1">1665000278316</td><td rowspan="1">-1665000278316</td></tr><tr><th colspan="4">Firefox test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">pack1.TestNG_Verift_Login_And_CreateNewAccount</td><td><a href="#m17">Verify_CreateNewAccount_Button</a></td><td rowspan="1">1665000270834</td><td rowspan="1">0</td></tr><tr><th colspan="4">Firefox test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">pack1.TestNG_verify_rooms_page</td><td><a href="#m18">Verify_ReturnToMessenger_button</a></td><td rowspan="1">1665000272325</td><td rowspan="1">812</td></tr><tr class="passedeven"><td><a href="#m19">Verify_VisitToHelpCenter_button</a></td><td rowspan="1">1665000274902</td><td rowspan="1">3408</td></tr></tbody>
 </table>
-<h2>Chrome test</h2><h3 id="m0">pack1.TestNg_Login_Retesting#Verify_Login_Credentials</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss.usermodel.Cell.getStringCellValue()&quot; because the return value of &quot;org.apache.poi.ss.usermodel.Row.getCell(int)&quot; is null
-	at Utils.Utility.getDataFromExcelSheet(Utility.java:41)
-	at pack1.TestNg_Login_Retesting.Verify_Login_Credentials(TestNg_Login_Retesting.java:74)
+<h2>Chrome test</h2><h3 id="m0">pack1.TestNG_Verift_Login_And_CreateNewAccount#afterMethod</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>[TestResult name=Verify_Login_Credentials status=FAILURE method=TestNG_Verift_Login_And_CreateNewAccount.Verify_Login_Credentials()[pri:1, instance:pack1.TestNG_Verift_Login_And_CreateNewAccount@a514af7] output={null}]</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.io.FileNotFoundException: D:\Velocity\TestNG ScreenShots\Test- 2001 06-10-2022 01.34.09.jpg (The system cannot find the path specified)
+	at java.base/java.io.FileOutputStream.open0(Native Method)
+	at java.base/java.io.FileOutputStream.open(FileOutputStream.java:293)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:235)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:184)
+	at org.openqa.selenium.io.FileHandler.copyFile(FileHandler.java:138)
+	at org.openqa.selenium.io.FileHandler.copy(FileHandler.java:117)
+	at Utils.Utility.captureScreenshot(Utility.java:30)
+	at pack1.TestNG_Verift_Login_And_CreateNewAccount.afterMethod(TestNG_Verift_Login_And_CreateNewAccount.java:118)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">pack1.TestNG_Verift_Login_And_CreateNewAccount#Verify_Login_Credentials</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.io.FileNotFoundException: D:\Velocity\TestNG ScreenShots\Test- 2001 06-10-2022 01.34.09.jpg (The system cannot find the path specified)
+	at java.base/java.io.FileOutputStream.open0(Native Method)
+	at java.base/java.io.FileOutputStream.open(FileOutputStream.java:293)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:235)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:184)
+	at org.openqa.selenium.io.FileHandler.copyFile(FileHandler.java:138)
+	at org.openqa.selenium.io.FileHandler.copy(FileHandler.java:117)
+	at Utils.Utility.captureScreenshot(Utility.java:30)
+	at pack1.TestNG_Verift_Login_And_CreateNewAccount.Verify_Login_Credentials(TestNG_Verift_Login_And_CreateNewAccount.java:69)
 	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
 	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
 	at java.base/java.lang.Thread.run(Thread.java:833)
 ... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">pack1.TestNg_Login_Retesting#Verify_Login_Credentials</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss.usermodel.Cell.getStringCellValue()&quot; because the return value of &quot;org.apache.poi.ss.usermodel.Row.getCell(int)&quot; is null
-	at Utils.Utility.getDataFromExcelSheet(Utility.java:41)
-	at pack1.TestNg_Login_Retesting.Verify_Login_Credentials(TestNg_Login_Retesting.java:74)
+<h3 id="m2">pack1.TestNG_Verift_Login_And_CreateNewAccount#Verify_Login_and_CreateNewAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">pack1.TestNG_Verift_Login_And_CreateNewAccount#afterClass</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">pack1.TestNG_Verift_Login_And_CreateNewAccount#afterMethod</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">pack1.TestNG_Verift_Login_And_CreateNewAccount#removeObjects</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">pack1.TestNG_verify_rooms_page#closedBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">pack1.TestNG_Verift_Login_And_CreateNewAccount#Verify_CreateNewAccount_Button</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.io.FileNotFoundException: D:\Velocity\TestNG ScreenShots\Test- 2001 06-10-2022 01.34.09.jpg (The system cannot find the path specified)
+	at java.base/java.io.FileOutputStream.open0(Native Method)
+	at java.base/java.io.FileOutputStream.open(FileOutputStream.java:293)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:235)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:184)
+	at org.openqa.selenium.io.FileHandler.copyFile(FileHandler.java:138)
+	at org.openqa.selenium.io.FileHandler.copy(FileHandler.java:117)
+	at Utils.Utility.captureScreenshot(Utility.java:30)
+	at pack1.TestNG_Verift_Login_And_CreateNewAccount.afterMethod(TestNG_Verift_Login_And_CreateNewAccount.java:118)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">pack1.TestNG_verify_rooms_page#Verify_ReturnToMessenger_button</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">pack1.TestNG_verify_rooms_page#Verify_VisitToHelpCenter_button</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Firefox test</h2><h3 id="m10">pack1.TestNG_Verift_Login_And_CreateNewAccount#afterMethod</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>[TestResult name=Verify_Login_Credentials status=FAILURE method=TestNG_Verift_Login_And_CreateNewAccount.Verify_Login_Credentials()[pri:1, instance:pack1.TestNG_Verift_Login_And_CreateNewAccount@72967906] output={null}]</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.io.FileNotFoundException: D:\Velocity\TestNG ScreenShots\Test- 2001 06-10-2022 01.34.30.jpg (The system cannot find the path specified)
+	at java.base/java.io.FileOutputStream.open0(Native Method)
+	at java.base/java.io.FileOutputStream.open(FileOutputStream.java:293)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:235)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:184)
+	at org.openqa.selenium.io.FileHandler.copyFile(FileHandler.java:138)
+	at org.openqa.selenium.io.FileHandler.copy(FileHandler.java:117)
+	at Utils.Utility.captureScreenshot(Utility.java:30)
+	at pack1.TestNG_Verift_Login_And_CreateNewAccount.afterMethod(TestNG_Verift_Login_And_CreateNewAccount.java:118)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">pack1.TestNG_Verift_Login_And_CreateNewAccount#Verify_Login_Credentials</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.io.FileNotFoundException: D:\Velocity\TestNG ScreenShots\Test- 2001 06-10-2022 01.34.30.jpg (The system cannot find the path specified)
+	at java.base/java.io.FileOutputStream.open0(Native Method)
+	at java.base/java.io.FileOutputStream.open(FileOutputStream.java:293)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:235)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:184)
+	at org.openqa.selenium.io.FileHandler.copyFile(FileHandler.java:138)
+	at org.openqa.selenium.io.FileHandler.copy(FileHandler.java:117)
+	at Utils.Utility.captureScreenshot(Utility.java:30)
+	at pack1.TestNG_Verift_Login_And_CreateNewAccount.Verify_Login_Credentials(TestNG_Verift_Login_And_CreateNewAccount.java:69)
 	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
 	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
 	at java.base/java.lang.Thread.run(Thread.java:833)
 ... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">pack1.TestNg_Login_Retesting#Verify_Login_Credentials</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss.usermodel.Cell.getStringCellValue()&quot; because the return value of &quot;org.apache.poi.ss.usermodel.Row.getCell(int)&quot; is null
-	at Utils.Utility.getDataFromExcelSheet(Utility.java:41)
-	at pack1.TestNg_Login_Retesting.Verify_Login_Credentials(TestNg_Login_Retesting.java:74)
+<h3 id="m12">pack1.TestNG_Verift_Login_And_CreateNewAccount#Verify_Login_and_CreateNewAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">pack1.TestNG_Verift_Login_And_CreateNewAccount#afterClass</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">pack1.TestNG_Verift_Login_And_CreateNewAccount#afterMethod</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">pack1.TestNG_Verift_Login_And_CreateNewAccount#removeObjects</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m16">pack1.TestNG_verify_rooms_page#closedBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m17">pack1.TestNG_Verift_Login_And_CreateNewAccount#Verify_CreateNewAccount_Button</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.io.FileNotFoundException: D:\Velocity\TestNG ScreenShots\Test- 2001 06-10-2022 01.34.30.jpg (The system cannot find the path specified)
+	at java.base/java.io.FileOutputStream.open0(Native Method)
+	at java.base/java.io.FileOutputStream.open(FileOutputStream.java:293)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:235)
+	at java.base/java.io.FileOutputStream.&lt;init&gt;(FileOutputStream.java:184)
+	at org.openqa.selenium.io.FileHandler.copyFile(FileHandler.java:138)
+	at org.openqa.selenium.io.FileHandler.copy(FileHandler.java:117)
+	at Utils.Utility.captureScreenshot(Utility.java:30)
+	at pack1.TestNG_Verift_Login_And_CreateNewAccount.afterMethod(TestNG_Verift_Login_And_CreateNewAccount.java:118)
 	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
 	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
 	at java.base/java.lang.Thread.run(Thread.java:833)
-... Removed 10 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m18">pack1.TestNG_verify_rooms_page#Verify_ReturnToMessenger_button</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m19">pack1.TestNG_verify_rooms_page#Verify_VisitToHelpCenter_button</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
