--- a/mavan_facebook/test-output/old/Suite2/classes.html
+++ b/mavan_facebook/test-output/old/Suite2/classes.html
@@ -4,7 +4,49 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>pack1.TestNg_Login_Retesting</td>
+<td>pack1.TestNG_verify_rooms_page</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Verify_VisitToHelpCenter_button</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Verify_ReturnToMessenger_button</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createPomObjects</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>OpenRoomsPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>removeObjects</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>pack1.TestNG_Verift_Login_And_CreateNewAccount</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,6 +54,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>Verify_Login_Credentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Verify_CreateNewAccount_Button</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
